# gachirat

./: .env.example  .gitignore  README.md  nginx.conf
backend/: app.py  food_classifier.py
esp32/hackrpi2025_fw/: sdkconfig  sdkconfig.old
esp32/hackrpi2025_fw/main/: CMakeLists.txt  hackrpi2025_fw.c  simple_animation_lib.c  simple_spi.h  simple_wifi.h
esp32/hackrpi2025_fw/main/assets/: HAPPY_TO_IDLE_frames.h  HAPPY_frames.c  HAPPY_frames.h  IDLE_TO_HAPPY_frames.h  NEUTRAL_frames.h  SAD_TO_IDLE_frames.h  TEST_frames.h
frontend/: index.html
tomogachi/: .env.example  .gitignore  README.md  docker-compose.yml
tomogachi/backend/: app.py  database.py  food_classifier.py  requirements.txt
tomogachi/esp32/hackrpi2025_fw/: CMakeLists.txt
tomogachi/esp32/hackrpi2025_fw/main/: simple_animation_lib.h  simple_spi.c  simple_wifi.c
tomogachi/esp32/hackrpi2025_fw/main/assets/: HAPPY_TO_IDLE_frames.c  IDLE_TO_HAPPY_frames.c  IDLE_TO_SAD_frames.c  IDLE_TO_SAD_frames.h  NEUTRAL_frames.c  SAD_TO_IDLE_frames.c  SAD_frames.c  SAD_frames.h  TEST_frames.c
tomogachi/frontend/: index.html  script.js  style.css
