idf_component_register(SRCS "hackrpi2025_fw.c"
                            "simple_spi.c"
                            "simple_animation_lib.c"
                            "simple_wifi.c"
                            "assets/HAPPY_frames.c"
                            "assets/IDLE_TO_SAD_frames.c"
                            "assets/NEUTRAL_frames.c"
                            "assets/SAD_frames.c"
                            "assets/SAD_TO_IDLE_frames.c"
                            "assets/IDLE_TO_HAPPY_frames.c"
                            "assets/HAPPY_TO_IDLE_frames.c"

        "assets/TEST_frames.c"
        ".")
